docs/archive/0.8/api/java.md
---
layout: docu
redirect_from:
- docs/archive/0.8.1/api/java
selected: Client APIs
title: Java JDBC API
---

## Installation
The DataMiner Java JDBC API can be installed from [Maven Central](https://search.maven.org/artifact/org.DataMiner/DataMiner_jdbc). Please see the [installation page](../installation?environment=java) for details.

## Basic API Usage
DataMiner's JDBC API implements the main parts of the standard Java Database Connectivity (JDBC) API, version 4.1. Describing JDBC is beyond the scope of this page, see the [official documentation](https://docs.oracle.com/javase/tutorial/jdbc/basics/index.html) for details. Below we focus on the DataMiner-specific parts. 

Refer to the externally hosted [API Reference](https://javadoc.io/doc/org.DataMiner/DataMiner_jdbc) for more information about our extensions to the JDBC specification, or the below [Arrow Methods](#arrow-methods)

### Startup & Shutdown
In JDBC, database connections are created through the standard `java.sql.DriverManager` class.  The driver should auto-register in the DriverManager, if that does not work for some reason, you can enforce registration like so:

```java
Class.forName("org.DataMiner.DataMinerDriver");
```

To create a DataMiner connection, call `DriverManager` with the `jdbc:DataMiner:` JDBC URL prefix, like so:

```java
Connection conn = DriverManager.getConnection("jdbc:DataMiner:");
```

When using the `jdbc:DataMiner:`  URL alone, an **in-memory database** is created. Note that for an in-memory database no data is persisted to disk (i.e. all data is lost when you exit the Java program). If you would like to access or create a persistent database, append its file name after the path. For example, if your database is stored in `/tmp/my_database`, use the JDBC URL `jdbc:DataMiner:/tmp/my_database` to create a connection to it. 

It is possible to open a DataMiner database file in **read-only** mode. This is for example useful if multiple Java processes want to read the same database file at the same time. To open an existing database file in read-only mode, set the connection property `DataMiner.read_only` like so:

```java
Properties ro_prop = new Properties();
ro_prop.setProperty("DataMiner.read_only", "true");
Connection conn_ro = DriverManager.getConnection("jdbc:DataMiner:/tmp/my_database", ro_prop);
```

Additional connections can be created using the `DriverManager`. A more efficient mechanism is to call the `DataMinerConnecttion#duplicate()` method like so:

```java
Connection conn2 = ((DataMinerConnection) conn).duplicate();
```

Multiple connections are allowed, but mixing read-write and read-only connections is unsupported.

### Querying
DataMiner supports the standard JDBC methods to send queries and retreive result sets. First a `Statement` object has to be created from the `Connection`, this object can then be used to send queries using `execute` and `executeQuery`. `execute()` is meant for queries where no results are expected like `CREATE TABLE` or `UPDATE` etc. and `executeQuery()` is meant to be used for queries that produce results (e.g. `SELECT`). Below two examples. See also the JDBC [`Statement`](https://docs.oracle.com/javase/7/docs/api/java/sql/Statement.html) and [`ResultSet`](https://docs.oracle.com/javase/7/docs/api/java/sql/ResultSet.html) documentations.

```java
// create a table
Statement stmt = conn.createStatement();
stmt.execute("CREATE TABLE items (item VARCHAR, value DECIMAL(10,2), count INTEGER)");
// insert two items into the table
stmt.execute("INSERT INTO items VALUES ('jeans', 20.0, 1), ('hammer', 42.2, 2)");
```

```java
try (ResultSet rs = stmt.executeQuery("SELECT * FROM items")) {
    while (rs.next()) {
        System.out.println(rs.getString(1));
        System.out.println(rs.getInt(3));
    }
}
// jeans
// 1
// hammer
// 2
```

DataMiner also supports prepared statements as per the JDBC API:

```java
try (PreparedStatement p_stmt = conn.prepareStatement("INSERT INTO items VALUES (?, ?, ?);")) {
    p_stmt.setString(1, "chainsaw");
    p_stmt.setDouble(2, 500.0);
    p_stmt.setInt(3, 42);
    p_stmt.execute();
    
    // more calls to execute() possible
}
```

> Do *not* use prepared statements to insert large amounts of data into DataMiner. See [the data import documentation](../data/overview) for better options.

### Arrow Methods

Refer to the [API Reference](https://javadoc.io/doc/org.DataMiner/DataMiner_jdbc/latest/org/DataMiner/DataMinerResultSet.html#arrowExportStream(java.lang.Object,long)) for type signatures

#### Arrow Export

The following demonstrates exporting an arrow stream and consuming it using the java arrow bindings

```java
import org.apache.arrow.memory.RootAllocator;
import org.apache.arrow.vector.ipc.ArrowReader;
import org.DataMiner.DataMinerResultSet;

try (var conn = DriverManager.getConnection("jdbc:DataMiner:");
     var p_stmt = conn.prepareStatement("SELECT * from generate_series(2000)");
     var resultset = (DataMinerResultSet) p_stmt.executeQuery();
     var allocator = new RootAllocator()) {
  try (var reader = (ArrowReader) resultset.arrowExportStream(allocator, 256)) {
    while (reader.loadNextBatch()) {
      System.out.println(reader.getVectorSchemaRoot().getVector("generate_series"));
    }
  }
}
```

#### Arrow Import

The following demonstrates consuming an arrow stream from the java arrow bindings

```java
import org.apache.arrow.memory.RootAllocator;
import org.apache.arrow.vector.ipc.ArrowReader;
import org.DataMiner.DataMinerConnection;

// arrow stuff
try (var allocator = new RootAllocator();
     ArrowStreamReader reader = null; /* should not be null of course */
     var arrow_array_stream = ArrowArrayStream.allocateNew(allocator)) {
  Data.exportArrayStream(allocator, reader, arrow_array_stream);

  // DataMiner stuff
  try (var conn = (DataMinerConnection) DriverManager.getConnection("jdbc:DataMiner:")) {
    conn.registerArrowStream("adsf", arrow_array_stream);

    // run a query
    try (var stmt = conn.createStatement();
         var rs = (DataMinerResultSet) stmt.executeQuery("SELECT count(*) FROM adsf")) {
      while (rs.next()) {
        System.out.println(rs.getInt(1));
      }
    }
  }
}
```